--- a/views/tech_add.handlebars
+++ b/views/tech_add.handlebars
@@ -19,15 +19,15 @@
         {{/if}}
         <div class="form-group">
             <label for="user">Username</label>
-            <input id="user" type="text" name="user"/>
+            <input id="user" type="text" name="user" required/>
         </div>
         <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email"/>
+            <input type="email" id="email" name="email" required/>
         </div>
         <div class="form-group">
             <label for="pass">Password</label>
-            <input id="pass" type="password" name="pass"/>
+            <input id="pass" type="password" name="pass" required/>
         </div>
         <div class="form-group">
             <input type="submit" value="Register">
