--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -22,11 +22,11 @@
         {{/if}}
         <div class="form-group">
             <label for="user">Username</label>
-            <input type="text" id="user" name="user"/>
+            <input type="text" id="user" name="user" required/>
         </div>
         <div class="form-group">
             <label for="pass">Password</label>
-            <input type="password" id="pass" name="pass"/>
+            <input type="password" id="pass" name="pass" required/>
         </div>
         <div class="form-group">
             <input type="submit" value="Login">
