--- a/views/tech_login.handlebars
+++ b/views/tech_login.handlebars
@@ -19,11 +19,11 @@
         {{/if}}
         <div class="form-group">
             <label for="user">Username</label>
-            <input id="user" type="text" name="user"/>
+            <input id="user" type="text" name="user" required/>
         </div>
         <div class="form-group">
             <label for="pass">Password</label>
-            <input id="pass" type="password" name="pass"/>
+            <input id="pass" type="password" name="pass" required/>
         </div>
         <div class="form-group">
             <input type="submit" value="Login">
