--- a/views/tech_report.handlebars
+++ b/views/tech_report.handlebars
@@ -14,107 +14,117 @@
 <body>
 <nav class="navbar">
     <div class="container nav-container">
-        <a class="nav-title" href="/tech/dashboard">Domestic Repair</a>
-        <ul>
-            <li>
-                {{#if tech.user}}
-                    <span class="badge">Technician</span>
-                    Hi, {{tech.user}}
-                {{/if}}
-            </li>
-            <a href="/tech/logout">
-                <li>
-                    <i class="fas fa-sign-out-alt"></i> Logout
-                </li>
-            </a>
-        </ul>
+        <a class="nav-title" href="/tech/dashboard">
+            <span class="hide-lg">DR</span>
+            <span class="hide-md">Domestic Repair</span>
+        </a>
+        <div class="current-user">
+            <span class="badge">Technician</span>
+            <span class="hide-md">Hi, {{tech.user}}</span> 
+        </div>
+        <a class="logout" href="/tech/logout">
+            <span class="hide-md">Logout</span> <i class="fas fa-power-off"></i>
+        </a>
     </div>
 </nav>
 <div class="container">
     {{#if success}}
-        <p class="success">{{success}}</p>
+        <div class="toast success">
+            <p>{{success}}</p>
+        </div>
     {{/if}}
     {{#if error}}
-        <p class="error">{{error}}</p>
+        <div class="toast error">
+            <p>{{error}}</p>
+        </div>
     {{/if}}
-    <a href="/tech/dashboard" class="go-back">
-        <button><i class="fas fa-arrow-left"></i> Go Back</button>
-    </a>
-    {{#if job.assigned}}
-        <a href="/tech/check/{{job.id}}" class="mark-completed">
-            {{#if job.status}}
-                <button class="go-right">
-                    Completed <i class="fas fa-thumbs-up text-green"></i>
-                </button>
-            {{else}}
-                <button class="bg-green text-white go-right">
-                    Mark Completed
-                </button>
-            {{/if}}
+
+
+<div class="hero-section">
+        <a href="/tech/dashboard" class="go-back">
+            <button><i class="fas fa-arrow-left"></i> Go Back</button>
         </a>
-    {{else}}
-        {{# if job.quoteId}}
-            <span class="mark-completed">
-                <button class="bg-blue text-white go-right disabled">
-                    Pending Approval
-                </button>
-            </span>
-        {{else}}
-            <span class="mark-completed" id="quote">
-                <button class="bg-green text-white go-right">
-                    Provide Quote
-                </button>
-            </span>
-        {{/if}}
-    {{/if}}
+        <div class="actions">
+            {{#if job.assigned}}
+                {{#if job.status}}
+                    <button>
+                        Completed <i class="fas fa-check"></i>
+                    </button>
+                {{else}}
+                    <a href="/tech/check/{{job.id}}"></a>
+                        <button>
+                            Mark Completed
+                        </button>
+                    </a>
+                {{/if}}
+            {{else}}
+                {{# if job.quoteId}}
+                    <span>
+                        <button class="pending">
+                            Pending Approval
+                        </button>
+                    </span>
+                {{else}}
+                    <span id="quote">
+                        <button>
+                            Provide Quote
+                        </button>
+                    </span>
+                {{/if}}
+            {{/if}}
+        </div>
+    </div>
+
+
     <div class="job-details">
         <div class="keywords">
-            <span> Appliance: <span class="tag">{{job.appType}}</span></span>
             <span> Age: <span class="tag">{{job.appAge}} years</span></span>
+            <span> Appliance: <span class="tag">{{job.appType}}</span></span>
             <span> Manufacturer: <span class="tag">{{job.appMan}}</span></span>
         </div>
-        <p class="created">by <span class="secondary">{{jobUser.user}}</span> | created: <span
-                class="secondary">{{job.createdAt}}</span></p>
+        <p class="created">
+            by <span class="secondary">{{user.user}}</span> | created: 
+            <span class="secondary">{{job.createdAt}}</span>
+        </p>
         <div class="job-desc">
             <p>{{job.desc}}</p>
         </div>
-        <span id="jobLat" style="opacity: 0; pointer-events: none">{{job.lat}}</span><span id="jobLng" style="opacity: 0; pointer-events: none">{{job.lng}}</span>
+        <span id="jobLat" style="opacity: 0; pointer-events: none">{{job.lat}}</span><span id="jobLng"
+                                                                                           style="opacity: 0; pointer-events: none">{{job.lng}}</span>
         <div id="jobMap"></div>
     </div>
-    <br>
-    {{#if quote}}
-        <div class="job-details">
-            <h3 class="text-center">Quote</h3>
-            <div class="keywords">
-                <span> Price: <span class="tag">£ {{quote.price}}</span></span>
-                <span> Booked Date: <span class="tag">{{quote.executionDate}}</span></span>
-                <span> Booked Time-Slot: <span class="tag">{{quote.executionTime}}</span></span>
-            </div>
-        <p class="created">
-            A technician will come to the premises to execute the repair. His name is <span
-                class="secondary">{{tech.user}}</span>.
-            <br>
-            Please do not let them in before they have identified themselves. <br>
-            <strong>We do not take responsibility if you get killed by someone other than our employee</strong>
 
-            <br><br>
-            {{#if quote.approved}}
-                <p class="text-green">User has accepted the offer! Please proceed to repair.</p>
-            {{else}}
-                <h4 class="text-center">Waiting for user confirmation</h4>
-            {{/if}}
-            </p>
-        </div>
-    {{/if}}
-    <br>
+{{#if quote}}
+            <div class="job-details">
+                <p class="title"><i class="fas fa-file-invoice-dollar"></i> Quote</h3>
+                <div class="keywords">
+                    <span> Price: <span class="tag">£ {{quote.price}}</span></span>
+                    <span> Booked Date: <span class="tag">{{quote.executionDate}}</span></span>
+                    <span> Booked Time-Slot: <span class="tag">{{quote.executionTime}}</span></span>
+                </div>
+                <p class="job-desc">
+                    A technician will come to the premises to execute the repair. His name is <span class="secondary">{{tech.user}}</span>.
+                    <br>
+                    Please do not let them in before they have identified themselves. <br>
+                    <strong>We do not take responsibility if you get killed by someone other than our employee</strong>
+                </p>
+                <div class="quote-action">
+                    {{#if quote.approved}}
+                        <p class="text-green">User has accepted the offer! Please proceed to repair.</p>
+                    {{else}}
+                        <p class="text-accent">Waiting for user confirmation</p>
+                    {{/if}}
+                </div>
+            </div>
+        {{/if}}
+
     {{#if logs}}
         <div class="job-details">
-            <h3 class="text-center">Log</h3>
+            <p class="title"><i class="fas fa-info-circle"></i> Logs</h3>
             {{#each logs}}
-                <p class="created">{{desc}}
-                    <br>
-                    <strong>{{createdAt}}</strong>
-                </p>
+                <div class="log">
+                    <span>{{desc}}</span><span class="time">{{createdAt}}</span>
+                </div>
             {{/each}}
         </div>
     {{/if}}
