--- a/views/tech_report.handlebars
+++ b/views/tech_report.handlebars
@@ -51,7 +51,7 @@
                         Completed <i class="fas fa-check"></i>
                     </button>
                 {{else}}
-                    <a href="/tech/check/{{job.id}}"></a>
+                    <a href="/tech/check/{{job.id}}">
                         <button>
                             Mark Completed
                         </button>
