--- a/public/style.css
+++ b/public/style.css
@@ -28,8 +28,15 @@ body {
   border-radius: 5px;
   -webkit-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.15);
-  max-width: 300px;
+  max-width: 400px;
   min-width: 0;
+}
+
+.toast.hide {
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  opacity: 0;
+  top: 1.5rem;
 }
 
 .toast.success {
@@ -81,6 +88,10 @@ body {
   color: #FA312B !important;
 }
 
+.bg-red {
+  background: #FA312B !important;
+}
+
 .user-form {
   max-width: 25rem;
   min-width: 0;
@@ -122,7 +133,7 @@ body {
   text-indent: 1rem;
   width: 100%;
   border: none;
-  border-bottom: 1px solid #0477A6;
+  border-bottom: 2px solid #0477A6;
   margin: 0 0 1rem 0;
 }
 
@@ -770,10 +781,21 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
   margin: 0 -0.5rem;
+}
+
+@media (max-width: 768px) {
+  .row-wrap {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    margin: 0;
+  }
 }
 
 .row-wrap .wrap-list {
@@ -786,6 +808,15 @@ body {
   border-radius: 5px;
   padding: 1rem 2rem;
   margin: 1.5rem 0.5rem;
+}
+
+@media (max-width: 768px) {
+  .row-wrap .wrap-list {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    margin: 1.5rem 0 0 0;
+  }
 }
 
 .row-wrap .wrap-list .wrap-list-header {
@@ -959,7 +990,7 @@ body {
 
 .modal-overlay .modal-window .modal-body {
   width: 100%;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
   max-height: 85vh;
   overflow: hidden;
   overflow-y: auto;
@@ -1019,7 +1050,7 @@ body {
   text-indent: 1rem;
   width: 100%;
   border: none;
-  border-bottom: 1px solid #0477A6;
+  border-bottom: 2px solid #0477A6;
   margin: 0 0 1rem 0;
 }
 
@@ -1058,7 +1089,7 @@ body {
   text-indent: 1rem;
   width: 100%;
   border: none;
-  border-bottom: 1px solid #0477A6;
+  border-bottom: 2px solid #0477A6;
   margin: 0 0 1rem 0;
 }
 
@@ -1078,7 +1109,7 @@ body {
   text-indent: 1rem;
   width: 100%;
   border: none;
-  border-bottom: 1px solid #0477A6;
+  border-bottom: 2px solid #0477A6;
   margin: 0 0 1rem 0;
 }
 
