--- a/public/style.scss
+++ b/public/style.scss
@@ -17,6 +17,7 @@ $success: #66B22B;
 
 //UTILS
 $fast: all 0.1s ease-in-out;
+$mid: all 0.25s ease-in-out;
 $radius: 5px;
 $small-shadow: 0px 3px 10px -3px rgba(0,0,0,0.15);
 
@@ -59,8 +60,13 @@ body {
     padding: 0.5rem 1rem;
     border-radius: $radius;
     box-shadow: $small-shadow;
-    max-width: 300px;
+    max-width: 400px;
     min-width: 0;
+    &.hide{
+        transition: $mid;
+        opacity: 0;
+        top: 1.5rem;
+    }
     &.success{
         background: $success;
     }
@@ -109,6 +115,10 @@ body {
     color: $error !important;
 }
 
+.bg-red{
+    background: $error !important;
+}
+
 .user-form{
     max-width: 25rem;
     min-width: 0;
@@ -141,7 +151,7 @@ body {
             text-indent: 1rem;
             width: 100%;
             border: none;
-            border-bottom: 1px solid $accent;
+            border-bottom: 2px solid $accent;
             margin: 0 0 1rem 0;
             &:focus{
                 transition: $fast;
@@ -418,9 +428,6 @@ body {
                 padding: 0.5rem 0.75rem;
                 border-radius: $radius;
                 font-size: 0.8rem;
-                span{
-
-                }
             }
             &:hover{
                 transition: $fast;
@@ -551,8 +558,13 @@ body {
 
 .row-wrap{
     display: flex;
+    flex-wrap: wrap;
     align-items: flex-start;
     margin: 0 -0.5rem;
+    @media (max-width: 768px){
+        flex: 0 0 100%;
+        margin: 0;
+    }
     .wrap-list{
         flex: 1;
         background: $card-bg;
@@ -560,6 +572,10 @@ body {
         border-radius: $radius;
         padding: 1rem 2rem;
         margin: 1.5rem 0.5rem;
+        @media (max-width: 768px){
+            flex: 0 0 100%;
+            margin: 1.5rem 0 0 0;
+        }
         .wrap-list-header{
             display: flex;
             align-items: center;
@@ -665,7 +681,7 @@ body {
         }
         .modal-body{
             width: 100%;
-            padding: 1rem;
+            padding: 1rem 1.5rem;
             max-height: 85vh;
             overflow: hidden;
             overflow-y: auto;
@@ -701,7 +717,7 @@ body {
                         text-indent: 1rem;
                         width: 100%;
                         border: none;
-                        border-bottom: 1px solid $accent;
+                        border-bottom: 2px solid $accent;
                         margin: 0 0 1rem 0;
                         &:focus{
                             transition: $fast;
@@ -725,7 +741,7 @@ body {
                         text-indent: 1rem;
                         width: 100%;
                         border: none;
-                        border-bottom: 1px solid $accent;
+                        border-bottom: 2px solid $accent;
                         margin: 0 0 1rem 0;
                         &:focus{
                             transition: $fast;
@@ -741,7 +757,7 @@ body {
                         text-indent: 1rem;
                         width: 100%;
                         border: none;
-                        border-bottom: 1px solid $accent;
+                        border-bottom: 2px solid $accent;
                         margin: 0 0 1rem 0;
                         &:focus{
                             transition: $fast;
